<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="edu.orangecoastcollege.pdavis11.cs273.capstone.winetastingrating.AddNotesActivity">

    <TextView
        android:id="@+id/newWineTitle"
        android:gravity="center"
        android:background="@color/violet"
        android:layout_width="match_parent"
        android:textColor="@color/midNightBlack"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add_notes_title"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/varietalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/newWineTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/varietal_text_view"
        android:background="@color/pastelPurple1"
        android:textSize="18sp"
        android:gravity="center"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/varietalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/varietalTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/vintageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/varietalEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/vintage_text_view"
        android:background="@color/pastelPurple2"
        android:textSize="18sp"
        android:gravity="center"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/vintageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/vintageTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/wineryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vintageEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/winery_text_view"
        android:background="@color/pastelPurple3"
        android:textSize="18sp"
        android:gravity="center"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/wineryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/wineryTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/vineYardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wineryEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/vineyard_text_view"
        android:background="@color/pastelPurple4"
        android:textSize="18sp"
        android:gravity="center"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/vineYardEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/vineYardTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vineYardEditView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/price_text_view"
        android:background="@color/pastelPurple5"
        android:textSize="18sp"
        android:gravity="center"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/priceEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/priceTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="73dp" />

    <Button
        android:id="@+id/button"
        android:onClick="addWineToNotes"
        android:layout_width="339dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/summary_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceEditView"
        tools:layout_editor_absoluteY="404dp" />


</android.support.constraint.ConstraintLayout>
